Update version number and NuGet release info

--- a/source/Core/Core.nuspec
+++ b/source/Core/Core.nuspec
@@ -9,8 +9,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>CodeFirst for uCommerce. Eliminate the manual process of creating definitions in uCommerce backend. Simple creation of definitions and easy deployment.</description>
     <releaseNotes>
-      1.0.3:
-        Upgraded uCommerce libraries to version 7.
+      1.0.4:
+        Taking dependency on lastest uCommerce assembly version.
     </releaseNotes>
     <projectUrl>https://github.com/RagingRudolf/CodeFirst.UCommerce</projectUrl>
     <licenseUrl>https://github.com/RagingRudolf/CodeFirst.UCommerce/blob/master/LICENSE.md</licenseUrl>
